[project]
name = "atsphinx-audioplayer"
version = "0.1.0"
description = "Register directive to render audio element"
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
license = "Apache-2.0"
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",

]
readme = "README.rst"
dependencies = [
    "sphinx",
]

[project.urls]
Home = "https://github.com/atsphinx/audioplayer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "pytest",
    "sphinx-autobuild",
    "sphinx-intl",
    "esbonio",
    "atsphinx-mini18n",
    "beautifulsoup4>=4.12.3",
    "furo>=2024.8.6",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]

[tool.ruff.lint]
select = ["C90", "D", "E", "F", "I", "W"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/atsphinx"]
only-includes = ["src/atsphinx"]
